tests/cases/fail/tuple_destructure_mixed_decl_assign.p4
def pair() -> (int,float):
    return (1, 2.5)

def main() -> None:
    a: int = 0
    a, b = pair()
